@@ -32,14 +32,14 @@
             <Measurement>
                 <name>latitude</name>
                 <symbol>B</symbol>
-                <unit>°</unit>
+                <unit>° '</unit>
                 <active>false</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
             </Measurement>
             <Measurement>
                 <name>longitude</name>
                 <symbol>L</symbol>
-                <unit>°</unit>
+                <unit>° '</unit>
                 <active>false</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
             </Measurement>
@@ -364,14 +364,14 @@
             <Measurement>
                 <name>latitude</name>
                 <symbol>B</symbol>
-                <unit>°</unit>
+                <unit>° '</unit>
                 <active>false</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
             </Measurement>
             <Measurement>
                 <name>longitude</name>
                 <symbol>L</symbol>
-                <unit>°</unit>
+                <unit>° '</unit>
                 <active>false</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
             </Measurement>
