@@ -5,6 +5,7 @@ Generic changes/fixes
 	*
 Device specific changes/fixes
 	* iChargerUSB - enable program memory control
+	* GPS_Logger* - fix latitude, longitude unit which caused display problem while activated
 
 Version 3.4.1 - 03 Feb 2020
 Generic changes/fixes
